fixes ticket overlap fixes #15

--- a/src/styles/ticket.css
+++ b/src/styles/ticket.css
@@ -22,7 +22,8 @@
 @media (max-width: 500px) {
 	.ticket_wrapper {
 		margin-inline: 15px;
-		margin-block: -100px;
+		margin-top: -100px;
+		margin-bottom: -60px;
 	}
 }
 
